force-app/main/default/objects/Impact_2023__c/Impact_2023__c.object-meta.xml
<CustomObject>
    <description>Impact Conference 2032 object</description>
    <label>Impact 2023</label>
    <nameField>
        <label>Impact 2023 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Impacts 2023</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>