force-app/main/default/objects/Impact_2023__c/fields/Atteneded__c.field-meta.xml
<CustomField>
    <fullName>Atteneded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Person attended conference</description>
    <inlineHelpText>Person attended conference</inlineHelpText>
    <label>Atteneded</label>
    <type>Checkbox</type>
</CustomField>