force-app/main/default/objects/Impact_2023__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email of the attendee/registrant</description>
    <inlineHelpText>Email of the attendee/registrant</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>