force-app/main/default/objects/Impact_2023__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>First name of registrant</description>
    <inlineHelpText>First name of registrant</inlineHelpText>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>