force-app/main/default/objects/Impact_2023__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>Last name of registrant</description>
    <inlineHelpText>Last name of registrant</inlineHelpText>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>